Fixes navigation alignment issue

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1784,11 +1784,11 @@ hr.line.align-right {
   }
 
   .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
-    padding: 12px 0;
+    padding: 0;
   }
 
   .widget.extendednavigation ul li .text, .widget.extendednavigation ul li.folder .text {
-    padding-left: 20px;
+    padding-left: 25px;
     background-image: image('/images/arrow-left.png');
     background-position: left center;
     background-repeat: no-repeat;
